--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,6 +1,7 @@
-#Fri Dec 25 11:48:56 CET 2009
+#Thu Jan 14 21:06:07 CET 2010
 eclipse.preferences.version=1
 environment/project/0.697445322=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?>\r\n<environment append\="true" appendContributed\="true">\r\n<variable delimiter\=";" name\="PATH" operation\="append" value\="C\:\\msysgit\\mingw\\bin;C\:\\msysgit\\bin"/>\r\n</environment>\r\n
+environment/project/0.697445322.381966687=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?>\r\n<environment append\="true" appendContributed\="true">\r\n<variable delimiter\=";" name\="PATH" operation\="append" value\="C\:\\msysgit\\mingw\\bin;C\:\\msysgit\\bin"/>\r\n</environment>\r\n
 org.eclipse.cdt.core.formatter.alignment_for_arguments_in_method_invocation=16
 org.eclipse.cdt.core.formatter.alignment_for_base_clause_in_type_declaration=80
 org.eclipse.cdt.core.formatter.alignment_for_compact_if=0
