rc: switch off 240x320 emulation
Enable HI_RES_AWARE, which allows XCSoar to use the full physical
display resolution on Windows Mobile before version 5.

--- a/src/XCSoar.rc
+++ b/src/XCSoar.rc
@@ -1,3 +1,9 @@
+// use the full physical display resolution on WM<5.0
+HI_RES_AWARE CEUX MOVEABLE PURE
+BEGIN
+    0x0001
+END
+
 //Microsoft eMbedded Visual C++ generated resource script.
 //
 #include "resource.h"
