Dialogs/dlgFlarmTrafficDetails: New dialog showing FLARMnet and other details

--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -125,6 +125,8 @@ IDR_XML_CONFIGURATION_L XMLDIALOG DISCARDABLE   "Dialogs/dlgConfiguration_L.xml"
 IDR_XML_FILESELECT      XMLDIALOG DISCARDABLE   "Dialogs/dlgFileSelect.xml"
 IDR_XML_FLARMTRAFFIC    XMLDIALOG DISCARDABLE   "Dialogs/dlgFlarmTraffic.xml"
 IDR_XML_FLARMTRAFFIC_L  XMLDIALOG DISCARDABLE   "Dialogs/dlgFlarmTraffic_L.xml"
+IDR_XML_FLARMTRAFFICDETAILS    XMLDIALOG DISCARDABLE   "Dialogs/dlgFlarmTrafficDetails.xml"
+IDR_XML_FLARMTRAFFICDETAILS_L  XMLDIALOG DISCARDABLE   "Dialogs/dlgFlarmTrafficDetails_L.xml"
 IDR_XML_FONTEDIT        XMLDIALOG DISCARDABLE   "Dialogs/dlgFontEdit.xml"
 IDR_XML_HELP            XMLDIALOG DISCARDABLE   "Dialogs/dlgHelp.xml"
 IDR_XML_HELP_L          XMLDIALOG DISCARDABLE   "Dialogs/dlgHelp_L.xml"
