XCSoar.rc: add IDs for Launcher bmps, Simulator Prompt dialog
Signed-off-by: Rob Dunning <rob@raspberryridgesheepfarm.com>

--- a/src/XCSoar.rc
+++ b/src/XCSoar.rc
@@ -44,6 +44,8 @@ IDB_FLARMTRAFFIC        BITMAP  DISCARDABLE     "Bitmaps/flarmtra.bmp"
 IDB_GPSSTATUS1          BITMAP  DISCARDABLE     "Bitmaps/20x20_gpslost_1.bmp"
 IDB_GPSSTATUS2          BITMAP  DISCARDABLE     "Bitmaps/20x20_gpslost_2.bmp"
 IDB_LANDABLE            BITMAP  DISCARDABLE     "Bitmaps/Landable.bmp"
+IDB_LAUNCHER1           BITMAP  DISCARDABLE     "Bitmaps/launcher1.bmp"
+IDB_LAUNCHER2           BITMAP  DISCARDABLE     "Bitmaps/launcher2.bmp"
 IDB_LOGGER              BITMAP  DISCARDABLE     "Bitmaps/logging.bmp"
 IDB_LOGGEROFF           BITMAP  DISCARDABLE     "Bitmaps/loggingoff.bmp"
 IDB_MAPSCALE_A          BITMAP  DISCARDABLE     "Bitmaps/MapScale_A.bmp"
@@ -132,6 +134,8 @@ IDR_XML_HELP_L          XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgHelp_L.xml"
 IDR_XML_LOGGERREPLAY    XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgLoggerReplay.xml"
 IDR_XML_NUMBERENTRY_KEYBOARD XMLDIALOG DISCARDABLE "../Data/Dialogs/dlgNumberEntry_Keyboard.xml"
 IDR_XML_NUMBERENTRY_KEYBOARD_L XMLDIALOG DISCARDABLE "../Data/Dialogs/dlgNumberEntry_Keyboard_L.xml"
+IDR_XML_SIMULATORPROMPT_L       XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgSimulatorPrompt_L.xml"
+IDR_XML_SIMULATORPROMPT       XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgSimulatorPrompt.xml"
 IDR_XML_STARTPOINT_L    XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgStartPoint_L.xml"
 IDR_XML_STARTPOINT      XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgStartPoint.xml"
 IDR_XML_STARTTASK       XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgStartTask.xml"
