--- a/src/XCSoar.rc
+++ b/src/XCSoar.rc
@@ -177,6 +177,7 @@ IDR_XML_TASKEDIT        XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskEdit.xml
 IDR_XML_TASKLIST        XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskList.xml"
 IDR_XML_TASKMANAGER     XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskManager.xml"
 IDR_XML_TASKPROPERTIES  XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskProperties.xml"
+IDR_XML_TASKTYPE        XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskType.xml"
 
 // --- EGM96 Raster Data --- 
 
