--- a/src/XCSoar.rc
+++ b/src/XCSoar.rc
@@ -179,6 +179,7 @@ IDR_XML_TASKMANAGER     XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskManager.
 IDR_XML_TASKPROPERTIES  XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskProperties.xml"
 IDR_XML_TASKTYPE        XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskType.xml"
 IDR_XML_TASKPOINT       XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskPoint.xml"
+IDR_XML_TASKPOINTTYPE   XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskPointType.xml"
 
 // --- EGM96 Raster Data --- 
 
