XCSoar.rc: add IDB_SWIFT2: smaller bitmap resource
For Pick Profile Screen

--- a/src/XCSoar.rc
+++ b/src/XCSoar.rc
@@ -62,6 +62,7 @@ IDB_SCROLLBARBOT        BITMAP  DISCARDABLE     "Bitmaps/scrollbarBot.bmp"
 IDB_SCROLLBARFILL       BITMAP  DISCARDABLE     "Bitmaps/scrollbarFill.bmp"
 IDB_SMALL               BITMAP  DISCARDABLE     "Bitmaps/Small.bmp"
 IDB_SWIFT               BITMAP  DISCARDABLE     "Bitmaps/xcsoarswiftsplash.bmp"
+IDB_SWIFT2              BITMAP  DISCARDABLE     "Bitmaps/xcsoarswiftsplash2.bmp"
 IDB_TARGET              BITMAP  DISCARDABLE     "Bitmaps/target.bmp"
 IDB_TEAMMATE_POS        BITMAP  DISCARDABLE     "Bitmaps/TeammatePosition.bmp"
 IDB_TERRAINWARNING      BITMAP  DISCARDABLE     "Bitmaps/terrainw.bmp"
