--- a/src/XCSoar.rc
+++ b/src/XCSoar.rc
@@ -170,12 +170,19 @@ IDR_XML_WEATHER_L       XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgWeather_L.xm
 
 // new task editor
 IDR_XML_TASKEDIT        XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskEdit.xml"
+IDR_XML_TASKEDIT_L      XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskEdit_L.xml"
 IDR_XML_TASKLIST        XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskList.xml"
+IDR_XML_TASKLIST_L      XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskList_L.xml"
 IDR_XML_TASKMANAGER     XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskManager.xml"
+IDR_XML_TASKMANAGER_L   XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskManager_L.xml"
 IDR_XML_TASKPROPERTIES  XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskProperties.xml"
+IDR_XML_TASKPROPERTIES_L XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskProperties_L.xml"
 IDR_XML_TASKTYPE        XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskType.xml"
+IDR_XML_TASKTYPE_L      XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskType_L.xml"
 IDR_XML_TASKPOINT       XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskPoint.xml"
+IDR_XML_TASKPOINT_L     XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskPoint_L.xml"
 IDR_XML_TASKPOINTTYPE   XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskPointType.xml"
+IDR_XML_TASKPOINTTYPE_L XMLDIALOG DISCARDABLE   "../Data/Dialogs/dlgTaskPointType_L.xml"
 
 // --- EGM96 Raster Data --- 
 
