Bitmaps: Added orange airport/field symbols

--- a/src/XCSoar.rc
+++ b/src/XCSoar.rc
@@ -19,6 +19,7 @@ IDB_ABORT               BITMAP  DISCARDABLE     "Bitmaps/abort.bmp"
 IDB_ABOVETERRAIN        BITMAP  DISCARDABLE     "Bitmaps/aboveterrain.bmp"
 IDB_AIRPORT_REACHABLE   BITMAP  DISCARDABLE     "Bitmaps/LandableAirport.bmp"
 IDB_AIRPORT_UNREACHABLE BITMAP  DISCARDABLE     "Bitmaps/UnreachableAirport.bmp"
+IDB_AIRPORT_UNREACHABLE2 BITMAP  DISCARDABLE     "Bitmaps/UnreachableAirport2.bmp"
 IDB_AIRSPACE0           BITMAP  DISCARDABLE     "Bitmaps/airspace0.bmp"
 IDB_AIRSPACE1           BITMAP  DISCARDABLE     "Bitmaps/airspace1.bmp"
 IDB_AIRSPACE2           BITMAP  DISCARDABLE     "Bitmaps/airspace2.bmp"
@@ -53,6 +54,7 @@ IDB_MARK                BITMAP  DISCARDABLE     "Bitmaps/mark.bmp"
 IDB_OBSTACLE            BITMAP  DISCARDABLE     "Bitmaps/Obstacle.bmp"
 IDB_OUTFILED_REACHABLE  BITMAP  DISCARDABLE     "Bitmaps/LandableField.bmp"
 IDB_OUTFILED_UNREACHABLE BITMAP  DISCARDABLE     "Bitmaps/UnreachableField.bmp"
+IDB_OUTFILED_UNREACHABLE2 BITMAP  DISCARDABLE     "Bitmaps/UnreachableField2.bmp"
 IDB_PEAKHIGH            BITMAP  DISCARDABLE     "Bitmaps/peakhigh.bmp"
 IDB_PEAKLOW             BITMAP  DISCARDABLE     "Bitmaps/peaklow.bmp"
 IDB_REACHABLE           BITMAP  DISCARDABLE     "Bitmaps/Reachable.bmp"
