XCSoar.rc: Fixed typo (outfiled -> outfield)

--- a/src/XCSoar.rc
+++ b/src/XCSoar.rc
@@ -52,9 +52,9 @@ IDB_LOGGEROFF           BITMAP  DISCARDABLE     "Bitmaps/loggingoff.bmp"
 IDB_MAPSCALE_A          BITMAP  DISCARDABLE     "Bitmaps/MapScale_A.bmp"
 IDB_MARK                BITMAP  DISCARDABLE     "Bitmaps/mark.bmp"
 IDB_OBSTACLE            BITMAP  DISCARDABLE     "Bitmaps/Obstacle.bmp"
-IDB_OUTFILED_REACHABLE  BITMAP  DISCARDABLE     "Bitmaps/LandableField.bmp"
-IDB_OUTFILED_UNREACHABLE BITMAP  DISCARDABLE     "Bitmaps/UnreachableField.bmp"
-IDB_OUTFILED_UNREACHABLE2 BITMAP  DISCARDABLE     "Bitmaps/UnreachableField2.bmp"
+IDB_OUTFIELD_REACHABLE  BITMAP  DISCARDABLE     "Bitmaps/LandableField.bmp"
+IDB_OUTFIELD_UNREACHABLE BITMAP  DISCARDABLE     "Bitmaps/UnreachableField.bmp"
+IDB_OUTFIELD_UNREACHABLE2 BITMAP  DISCARDABLE     "Bitmaps/UnreachableField2.bmp"
 IDB_PEAKHIGH            BITMAP  DISCARDABLE     "Bitmaps/peakhigh.bmp"
 IDB_PEAKLOW             BITMAP  DISCARDABLE     "Bitmaps/peaklow.bmp"
 IDB_REACHABLE           BITMAP  DISCARDABLE     "Bitmaps/Reachable.bmp"
