XCSoar.rc: use the SVG "reachable" icon

--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -53,7 +53,7 @@ IDB_MARK                BITMAP  DISCARDABLE     "bitmaps/mark.bmp"
 IDB_OUTFIELD_REACHABLE  BITMAP  DISCARDABLE     "bitmaps/LandableField.bmp"
 IDB_OUTFIELD_UNREACHABLE BITMAP  DISCARDABLE     "bitmaps/UnreachableField.bmp"
 IDB_OUTFIELD_UNREACHABLE2 BITMAP  DISCARDABLE     "bitmaps/UnreachableField2.bmp"
-IDB_REACHABLE           BITMAP  DISCARDABLE     "bitmaps/Reachable.bmp"
+IDB_REACHABLE           BITMAP  DISCARDABLE     "../output/data/icons/reachable-20.bmp"
 IDB_SCROLLBARTOP        BITMAP  DISCARDABLE     "bitmaps/scrollbarTop.bmp"
 IDB_SCROLLBARMID        BITMAP  DISCARDABLE     "bitmaps/scrollbarMid.bmp"
 IDB_SCROLLBARBOT        BITMAP  DISCARDABLE     "bitmaps/scrollbarBot.bmp"
