--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -44,6 +44,7 @@ IDB_FLARMTRAFFIC        BITMAP  DISCARDABLE     "bitmaps/flarmtra.bmp"
 IDB_GPSSTATUS1          BITMAP  DISCARDABLE     "bitmaps/20x20_gpslost_1.bmp"
 IDB_GPSSTATUS2          BITMAP  DISCARDABLE     "bitmaps/20x20_gpslost_2.bmp"
 IDB_LANDABLE            BITMAP  DISCARDABLE     "../output/data/icons/landable-19.bmp"
+IDB_LANDABLE_BIG        BITMAP  DISCARDABLE     "../output/data/icons/landable-39.bmp"
 IDB_LAUNCHER1           BITMAP  DISCARDABLE     "bitmaps/launcher1.bmp"
 IDB_LAUNCHER2           BITMAP  DISCARDABLE     "bitmaps/launcher2.bmp"
 IDB_LOGGER              BITMAP  DISCARDABLE     "bitmaps/logging.bmp"
@@ -54,6 +55,7 @@ IDB_OUTFIELD_REACHABLE  BITMAP  DISCARDABLE     "bitmaps/LandableField.bmp"
 IDB_OUTFIELD_UNREACHABLE BITMAP  DISCARDABLE     "bitmaps/UnreachableField.bmp"
 IDB_OUTFIELD_UNREACHABLE2 BITMAP  DISCARDABLE     "bitmaps/UnreachableField2.bmp"
 IDB_REACHABLE           BITMAP  DISCARDABLE     "../output/data/icons/reachable-19.bmp"
+IDB_REACHABLE_BIG       BITMAP  DISCARDABLE     "../output/data/icons/reachable-39.bmp"
 IDB_SCROLLBARTOP        BITMAP  DISCARDABLE     "bitmaps/scrollbarTop.bmp"
 IDB_SCROLLBARMID        BITMAP  DISCARDABLE     "bitmaps/scrollbarMid.bmp"
 IDB_SCROLLBARBOT        BITMAP  DISCARDABLE     "bitmaps/scrollbarBot.bmp"
