XCSoar.rc: use the SVG "landable" icon
Delete the old BMP file.

--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -43,7 +43,7 @@ IDB_FLARMROSE           BITMAP  DISCARDABLE     "bitmaps/flarmcluster.bmp"
 IDB_FLARMTRAFFIC        BITMAP  DISCARDABLE     "bitmaps/flarmtra.bmp"
 IDB_GPSSTATUS1          BITMAP  DISCARDABLE     "bitmaps/20x20_gpslost_1.bmp"
 IDB_GPSSTATUS2          BITMAP  DISCARDABLE     "bitmaps/20x20_gpslost_2.bmp"
-IDB_LANDABLE            BITMAP  DISCARDABLE     "bitmaps/Landable.bmp"
+IDB_LANDABLE            BITMAP  DISCARDABLE     "../output/data/icons/landable-19.bmp"
 IDB_LAUNCHER1           BITMAP  DISCARDABLE     "bitmaps/launcher1.bmp"
 IDB_LAUNCHER2           BITMAP  DISCARDABLE     "bitmaps/launcher2.bmp"
 IDB_LOGGER              BITMAP  DISCARDABLE     "bitmaps/logging.bmp"
