Revert "Bitmaps: delete unused bitmap files"
This partially reverts commit adb66a142591b2614bd18a8a4563b64c5c30ff34.

The icon is used by the Topology.

--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -67,6 +67,7 @@ IDB_TARGET              BITMAP  DISCARDABLE     "bitmaps/target.bmp"
 IDB_TEAMMATE_POS        BITMAP  DISCARDABLE     "bitmaps/TeammatePosition.bmp"
 IDB_TERRAINWARNING      BITMAP  DISCARDABLE     "bitmaps/terrainw.bmp"
 IDB_THERMALSOURCE       BITMAP  DISCARDABLE     "bitmaps/thermalsource.bmp"
+IDB_TOWN                BITMAP  DISCARDABLE     "bitmaps/town.bmp"
 IDB_TURNPOINT           BITMAP  DISCARDABLE     "bitmaps/Turnpoint.bmp"
 IDB_UNIT_KM             BITMAP  DISCARDABLE     "bitmaps/UnitKm.bmp"
 IDB_UNIT_SM             BITMAP  DISCARDABLE     "bitmaps/UnitSm.bmp"
