Fixed gps status bitmap

--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -40,8 +40,8 @@ IDB_DLGBUTTONRIGHT32    BITMAP  DISCARDABLE     "bitmaps/DialogButtonRight32x32.
 IDB_FINALGLIDE          BITMAP  DISCARDABLE     "bitmaps/finalgli.bmp"
 IDB_FLARMROSE           BITMAP  DISCARDABLE     "bitmaps/flarmcluster.bmp"
 IDB_FLARMTRAFFIC        BITMAP  DISCARDABLE     "bitmaps/flarmtra.bmp"
-IDB_GPSSTATUS1          BITMAP  DISCARDABLE     "bitmaps/20x20_gpslost_1.bmp"
-IDB_GPSSTATUS2          BITMAP  DISCARDABLE     "bitmaps/20x20_gpslost_2.bmp"
+IDB_GPSSTATUS1          BITMAP  DISCARDABLE     "../output/data/icons/gpslost_1-19.bmp"
+IDB_GPSSTATUS2          BITMAP  DISCARDABLE     "../output/data/icons/gpslost_2-19.bmp"
 IDB_LANDABLE            BITMAP  DISCARDABLE     "../output/data/icons/landable-19.bmp"
 IDB_LANDABLE_BIG        BITMAP  DISCARDABLE     "../output/data/icons/landable-39.bmp"
 IDB_LAUNCHER1           BITMAP  DISCARDABLE     "bitmaps/launcher1.bmp"
