*.ini: Fixed path to the application icon

--- a/XCSoarALL.ini
+++ b/XCSoarALL.ini
@@ -5,7 +5,7 @@ Component = XCSoar
 [XCSoar]
 Description = Soaring Assistant
 Uninstall = XCSoar
-IconFile = Common\Source\Bitmaps\xcsoarswift.ico
+IconFile = Data\bitmaps\xcsoarswift.ico
 IconIndex = 0
 CabFiles = XCSoarPPC2003.ARMV4.CAB,XCSoarPPC.ARM.CAB,XCSoarPPC2002.arm.CAB
 ;,XCSoarPPC.MIPS.CAB
