--- a/XCSoarPPC.ini
+++ b/XCSoarPPC.ini
@@ -5,6 +5,6 @@ Component = XCSoar
 [XCSoar]
 Description = Soaring Assistant
 Uninstall = XCSoar
-IconFile = Common\Source\Bitmaps\xcsoar.ico
+IconFile = Data\bitmaps\xcsoarswift.ico
 IconIndex = 0
 CabFiles = XCSoarPPC.ARM.CAB,XCSoarPPC.MIPS.CAB
