--- a/XCSoarData.ini
+++ b/XCSoarData.ini
@@ -5,6 +5,6 @@ Component = XCSoarData
 [XCSoarData]
 Description = Soaring Assistant Data
 Uninstall = XCSoarData
-IconFile = Common\Source\Bitmaps\xcsoarswift.ico
+IconFile = Data\bitmaps\xcsoarswift.ico
 IconIndex = 0
 CabFiles = XCSoarData.CAB
