--- a/XCSoarPPC2002.ini
+++ b/XCSoarPPC2002.ini
@@ -5,7 +5,7 @@ Component = XCSoar
 [XCSoar]
 Description = Soaring Assistant
 Uninstall = XCSoar
-IconFile = Common\Source\Bitmaps\xcsoar.ico
+IconFile = Data\bitmaps\xcsoarswift.ico
 IconIndex = 0
 CabFiles = XCSoarPPC2002.ARM.CAB
 ;,XCSoarPPC2002.MIPS.CAB
