--- a/XCSoarPPC2003.ini
+++ b/XCSoarPPC2003.ini
@@ -5,6 +5,6 @@ Component = XCSoar
 [XCSoar]
 Description = Soaring Assistant
 Uninstall = XCSoar
-IconFile = Common\Source\Bitmaps\xcsoarswift.ico
+IconFile = Data\bitmaps\xcsoarswift.ico
 IconIndex = 0
 CabFiles = XCSoarPPC2003.ARMV4.CAB
