Data/XCSoar.rc, Makefile: generates splash screen from SVG at build.
Splash logo is now rendered from SVG at build time - support for
new resolutions can be added by editing build/resource.mk.

--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -52,8 +52,8 @@ IDB_OUTFIELD_UNREACHABLE2 BITMAP  DISCARDABLE     "bitmaps/UnreachableField2.bmp
 IDB_REACHABLE           BITMAP  DISCARDABLE     "../output/data/icons/reachable-19.bmp"
 IDB_REACHABLE_BIG       BITMAP  DISCARDABLE     "../output/data/icons/reachable-31.bmp"
 IDB_SMALL               BITMAP  DISCARDABLE     "bitmaps/Small.bmp"
-IDB_SWIFT               BITMAP  DISCARDABLE     "bitmaps/xcsoarswiftsplash.bmp"
-IDB_SWIFT2              BITMAP  DISCARDABLE     "bitmaps/xcsoarswiftsplash2.bmp"
+IDB_SWIFT               BITMAP  DISCARDABLE     "../output/data/graphics/xcsoarswiftsplash-220.bmp"
+IDB_SWIFT2              BITMAP  DISCARDABLE     "../output/data/graphics/xcsoarswiftsplash-160.bmp"
 IDB_TARGET              BITMAP  DISCARDABLE     "bitmaps/target.bmp"
 IDB_TEAMMATE_POS        BITMAP  DISCARDABLE     "bitmaps/TeammatePosition.bmp"
 IDB_TERRAINWARNING      BITMAP  DISCARDABLE     "bitmaps/terrainw.bmp"
