--- a/Data/XCSoarLaunch.rc
+++ b/Data/XCSoarLaunch.rc
@@ -7,5 +7,5 @@ FONT 9, "System"
 BEGIN
 END
 
-IDB_XCSOARLSWIFT        BITMAP  DISCARDABLE     "bitmaps/launcher1.bmp"
-IDB_XCSOARLSWIFTSIM     BITMAP  DISCARDABLE     "bitmaps/launcher2.bmp"
+IDB_XCSOARLSWIFT        BITMAP  DISCARDABLE	"../output/data/graphics/launcher-224-1.bmp"
+IDB_XCSOARLSWIFTSIM     BITMAP  DISCARDABLE	"../output/data/graphics/launcher-224-2.bmp"
