Form/SymbolButton: use launcher icons generated from SVG
Its background color is "blue" (#0000ff), and we need to use
Canvas::stretch_transparent().

--- a/Data/XCSoar.rc
+++ b/Data/XCSoar.rc
@@ -40,8 +40,8 @@ IDB_GPSSTATUS1          BITMAP  DISCARDABLE     "../output/data/icons/gpslost_1-
 IDB_GPSSTATUS2          BITMAP  DISCARDABLE     "../output/data/icons/gpslost_2-19.bmp"
 IDB_LANDABLE            BITMAP  DISCARDABLE     "../output/data/icons/landable-19.bmp"
 IDB_LANDABLE_BIG        BITMAP  DISCARDABLE     "../output/data/icons/landable-31.bmp"
-IDB_LAUNCHER1           BITMAP  DISCARDABLE     "bitmaps/launcher1.bmp"
-IDB_LAUNCHER2           BITMAP  DISCARDABLE     "bitmaps/launcher2.bmp"
+IDB_LAUNCHER1           BITMAP  DISCARDABLE     "../output/data/graphics/launcher-224-1.bmp"
+IDB_LAUNCHER2           BITMAP  DISCARDABLE     "../output/data/graphics/launcher-224-2.bmp"
 IDB_LOGGER              BITMAP  DISCARDABLE     "bitmaps/logging.bmp"
 IDB_LOGGEROFF           BITMAP  DISCARDABLE     "bitmaps/loggingoff.bmp"
 IDB_MAPSCALE_A          BITMAP  DISCARDABLE     "bitmaps/MapScale_A.bmp"
